[metadata]
name = from_notebook
author = Eli Sohl
author_email = elisohl@gmail.com
license = MIT
description = Small Python utility for importing functions, classes, and constants from .ipynb files.
long_description = file: README_PYPI.md
url = https://github.com/wootfish/from_notebook
python_requires = >= 3.4
version = 0.0.1
