[metadata]
name = from-notebook
version = 1.0.0
author = Eli Sohl
author_email = elisohl@gmail.com
description = Small Python utility for importing functions, classes, and constants from .ipynb files.
long_description = file: README_PYPI.md
long_description_content_type = text/markdown
url = https://github.com/wootfish/from_notebook
license = MIT
python_requires = >= 3.4

[options]
packages = find:
